<resources>
    <string name="app_name">PECA</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="sign_in">Sign in</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="scan">Scan</string>
    <string name="home">Home</string>
    <string name="calculate">Calculate</string>
    <string name="location">Location</string>
    <string name="profile">Profile</string>
    <string name="fragment">fragment</string>
    <string name="harga">harga</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inpari">Inpari</string>
    <string name="inpago">Inpago</string>
    <string name="Hipa">Hipa</string>
    <string name="Inpara">Inpara</string>
    <string name="app_slogan">Rawat padimu, perbanyak panenmu dengan PadTani</string>
    <string name="bibit">Bibit</string>
    <string name="slogan_location">Cari mitra</string>
    <string name="slogan_calculate">Rencanakan modal produksi sawahmu dengan padTani.</string>
    <string name="explore">explore</string>
    <string name="kondisi_padi">Kondisi Padi</string>
    <string name="kondisi">kondisi</string>
    <string name="index_bwd">Index BWD</string>
    <string name="bwd">BWD</string>
    <string name="our_service">Our Service</string>
    <string name="peca_adopt">PECA Adopt</string>
    <string name="peca_grooming">PECA Grooming</string>
    <string name="peca_hotels">PECA Hotels</string>
    <string name="more">More...</string>
    <string name="peca_vets">PECA Vets</string>
    <string name="pet_care">PET CARE</string>
    <string name="search">Search</string>
</resources>