<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".HomeFragment">

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/et_shape"
            android:fontFamily="@font/robotomedium"
            android:hint="@string/search"
            android:paddingStart="20dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAutofill="no" />
        
        <FrameLayout
            android:id="@+id/flPromo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/banner"
                tools:ignore="ImageContrastCheck" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/our_service"
            android:textColor="@color/coklat"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/flPromo"
            app:layout_constraintTop_toBottomOf="@+id/flPromo" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:background="@color/abu"
            app:layout_constraintStart_toStartOf="@+id/tvService"
            app:layout_constraintTop_toBottomOf="@+id/tvService"
            app:tabIndicator="@drawable/menu_shape"
            app:tabIndicatorAnimationMode="fade"
            app:tabIndicatorColor="@color/kuning"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorHeight="50dp"
            app:tabInlineLabel="false"
            app:tabSelectedTextColor="@color/white"
            app:tabTextAppearance="@style/MenuStyle"
            app:tabTextColor="@color/coklat">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pet_care" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peca_grooming" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peca_hotels" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peca_adopt" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more" />
        </com.google.android.material.tabs.TabLayout>

        <TextView
            android:id="@+id/tvHow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="How to Care Your Pet?"
            android:textColor="@color/coklat"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tabs"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

